--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,10 @@
 
 }
 
+.container {
+  position: relative;
+}
+
 /* div {
   box-sizing: border-box;
 } */
@@ -94,35 +98,65 @@
   width: 90vw;
   height: 40vh;
   background: #fff;
+  position: relative;
 }
 
 .roleta-circulo {
-  width: 20em;
-  height: 20em;
-  border-radius: 50%;
-  border: 1px solid black;
-  
+  display: flex;
+  width: 100%;
+  height: 100%;
 }
 
 .roleta-opcao {
-  color: #000;
+  /* border: 1px solid #FFF; */
+  width: 10%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+  /* animation: rodar 5s linear infinite; */
+}
+
+.roleta-opcao:nth-child(even) {
+  background-color: #000;
+}
+
+.roleta-opcao:nth-child(odd) {
+  background-color: #e04f4f;
+}
+
+.roleta-opcao-nome {
+  transform: rotate(90deg);
+  font-size: 2em;
   width: 10em;
-  height: 10em;
-  background-color: rgb(216, 135, 29);
-  border-radius: 50% 100% 0% 100%;
-
+  position: absolute;
+  bottom: 50px;
+  /* color: ; */
 }
 
-.premio1 {
-  /* clip-path: circle(40% at 40% 50%); */
-  /* clip-path: ellipse(50% 30% at 50% 50%); */
-  transform: translateY(-20px) translateX(80px) rotate(45deg);
+.seta {
+  width: 150px;
+  height: 100px;
+  border-radius: 0 0 100% 100%;
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+  transform: rotate(180deg);
+  background-color: #e9ec2a;
+  position: absolute;
+  left: 45%;
+  top: -20px;
+  border: 5px solid #FFF;
+  cursor: pointer;
 }
 
-.premio2 {
-  transform: translateY(-190px) translateX(150px) rotate(70deg);
+.modal {
+  position: absolute;
+  top: 10px;
+  background-color: #dddddc; color: #000;
+  border-radius: 10px;
+  width: 90%;
+  height: 85vh;
+  margin: 5%;
 }
 
-.premio3 {
-  transform: translateY(-250px) translateX(150px) rotate(135deg);
+.btn-fechar {
+  margin: 10% 45%;
 }
